[package]
name = "liblas"
version = "0.0.1"
edition = "2024"
authors = ["Matt Oestreich"]
description = "Short description of your crate"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/matthewoestreich/liblas"
homepage = "https://github.com/matthewoestreich/liblas#README.md"
keywords = ["las file", "lasso", "las", "geophysical well logs", "cwls las"]
categories = ["command-line-utilities", "science"] # See available categories here: https://crates.io/category_slugs

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "las2json"
path = "bin/main.rs"

[lib]
name = "liblas"
path = "src/lib.rs"
crate-type = ["rlib"]
