[package]
name = "liblas"
version = "0.0.1"
edition = "2024"
authors = ["Matt Oestreich"]
description = "A Rust library to parse .las files"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/matthewoestreich/liblas"
homepage = "https://github.com/matthewoestreich/liblas#README.md"
keywords = ["las-file", "lasso", "las", "well-logs", "cwls-las"]
categories = [
  "command-line-utilities",
  "science",
] # See available categories here: https://crates.io/category_slugs

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
clap = { version = "4.5.41", features = ["derive"] }

[dev-dependencies]
plotters = "0.3.7"

[[bin]]
name = "liblas"
path = "bin/main.rs"

[lib]
name = "liblas"
path = "src/lib.rs"
crate-type = ["rlib"]
